--- a/CardFlipTests/cardflip.html
+++ b/CardFlipTests/cardflip.html
@@ -2,17 +2,38 @@
 <html class=" js csstransforms3d" lang="en"><head>
   <title>Card Flip</title>
     <style media="screen" type="text/css">
-    .container {
-      width: 100px;
-      height: 160px;
+      .boardcontainer {
+        width: 360px;
+        height: 500px;
+        position: relative;
+        margin: 0px;
+      }
+
+    .boardrow{
+      height:33%;
+    }
+
+    .cardSet1{
+      height: 500px;
+      margin: 0;
       position: relative;
-      margin: 0px;
-      -webkit-perspective: 800px; -moz-perspective: 800px; -o-perspective: 800px; perspective: 800px;
+      width: 120px;
+    }
+    div.card1,div.card2,div.card3,div.card4,div.card5{
+      width: 32%;
+      height: 32%;
+      display: inline-block;
+    }
+
+    div.A1, div.B1, div.C1,div.A2, div.B2, div.C2,div.A3, div.B3, div.C3 {
+      width: 32%;
+      height: 32%;
+      display: inline-block;
     }
 
     .card {
-      width: 100%;
-      height: 100%;
+      width: 33%;
+      height: 33%;
       position: absolute;
       margin: 0px;
       display:block;
@@ -34,20 +55,17 @@
     }
 
     .cardfront {
+      background-size: cover; -webkit-background-size: cover;  -moz-background-size: cover; -o-background-size: cover; 
       margin: 0px;
       background-image: url(CardTemplate1.jpg);
-      background-size: 100%;
+      
     }
 
     .cardback {
+      background-size: cover; -webkit-background-size: cover;  -moz-background-size: cover; -o-background-size: cover; 
       margin: 0px;
-      background-size: 100%;
       background-image: url(rgeezard.jpg);      
       webkit-transform: rotateY( 180deg ); -moz-transform: rotateY( 180deg ); -o-transform: rotateY( 180deg ); transform: rotateY( 180deg );
-    }
-
-    .A1{
-
     }
   </style>
   <script src="cardflip.js"></script>
@@ -57,25 +75,84 @@
 
   <h1>Card Flip</h1>
 
-  <section class="container">
-    <div>
-      <div class="card A1">
-        <div class="cardfront"></div>
-        <div class="cardback"></div>
-      </div>
-      <div class="card B1">
-        <div class="cardfront"></div>
-        <div class="cardback"></div>
-      </div>
-      <div class="card C1">
-        <div class="cardfront"></div>
-        <div class="cardback"></div>
+
+  <div class="cardSet1">
+    <div class="card card1"></div>
+    <div class="card card2"></div>
+    <div class="card card3"></div>
+    <div class="card card4"></div>
+    <div class="card card5"></div>
+  </div>
+
+  <div class="boardcontainer">
+      <div class="boardrow">
+        <div class="A1">
+          <div class="card">
+            <div class="cardfront"></div>
+            <div class="cardback"></div>
+          </div>
+        </div>
+       <div class="B1">
+        <div class="card">
+          <div class="cardfront"></div>
+          <div class="cardback"></div>
+        </div>
+       </div>
+        <div class="C1">
+        <div class="card">
+          <div class="cardfront"></div>
+          <div class="cardback"></div>
+        </div>
       </div>
     </div>
-  </section>
+
+    <div class="boardrow">
+        <div class="A2">
+          <div class="card">
+            <div class="cardfront"></div>
+            <div class="cardback"></div>
+          </div>
+        </div>
+       <div class="B2">
+        <div class="card">
+          <div class="cardfront"></div>
+          <div class="cardback"></div>
+        </div>
+       </div>
+        <div class="C2">
+        <div class="card">
+          <div class="cardfront"></div>
+          <div class="cardback"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="boardrow">
+        <div class="A3">
+          <div class="card">
+            <div class="cardfront"></div>
+            <div class="cardback"></div>
+          </div>
+        </div>
+       <div class="B3">
+        <div class="card">
+          <div class="cardfront"></div>
+          <div class="cardback"></div>
+        </div>
+       </div>
+        <div class="C3">
+        <div class="card">
+          <div class="cardfront"></div>
+          <div class="cardback"></div>
+        </div>
+      </div>
+    </div>
+
+  </div>
 
   <section id="options">
     <p><button id="flip">Flip Card</button></p>
   </section>
+
 </body>
 </html>
